--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -6,3 +6,26 @@
 .trustedMobile {
     display: none;
 }
+
+@media (max-width: 320px){
+    .trustedMobile {
+        font-size: 10px;
+    }
+}
+
+@media (max-width: 768px){
+    .trustedMobile {
+        font-size: 12px;
+    }    
+}
+
+@media (max-width: 992px){
+    .trustedMobile {
+        display: inline-block;
+        float: right;
+        position: absolute;
+        top: 10px;
+        right: 20px;
+        font-size: 14px;
+    }
+}
